--- a/pyscript_demo/index.html
+++ b/pyscript_demo/index.html
@@ -16,7 +16,7 @@
 # A simple serverless static interactive python notebook 
 The notebook you see here executes Python code directly in the browser thanks to Pyscript. 
 Tailwind.css and marked.js are used to render the text written in Markdown directly into the HTML. This page is entirely static and created without compilation. 
-The code for this page is displayed below. To learn more, you can read the article here:
+To learn more, you can read the article here: https://medium.com/@nicogalland/a-simple-serverless-static-interactive-python-notebook-with-pyscrypt-marked-js-and-tailwind-css-ef40419345d1
 
 ## Interactive Python code in the browser
 Success score in French middle schools against parents's socio-professional level, by county.
